--- a/electronics_enduser/package.json
+++ b/electronics_enduser/package.json
@@ -13,7 +13,8 @@
     "next": "14.2.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "swiper": "^11.1.14"
+    "swiper": "^11.1.14",
+    "react-loading-skeleton": "^3.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
