--- a/electronics_enduser/package.json
+++ b/electronics_enduser/package.json
@@ -14,7 +14,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-loading-skeleton": "^3.5.0",
-    "swiper": "^11.1.14"
+    "swiper": "^11.1.14",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
