get data product enduser

--- a/electronics_enduser/package.json
+++ b/electronics_enduser/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.6",
     "bootstrap": "4.6.2",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
     "react-loading-skeleton": "^3.5.0",
-    "swiper": "^11.1.14"
+    "swiper": "^11.1.14",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
