--- a/electronics_enduser/package.json
+++ b/electronics_enduser/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
     "bootstrap": "4.6.2",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.2",
     "react-loading-skeleton": "^3.5.0",
+    "react-toastify": "^10.0.6",
     "swiper": "^11.1.14",
+    "yup": "^1.4.0",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
