--- a/electronics_admin/package.json
+++ b/electronics_admin/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^43.3.1",
+    "@ckeditor/ckeditor5-react": "^9.3.1",
     "@tanstack/react-query": "^5.59.0",
+    "@tinymce/tinymce-react": "^5.1.1",
     "add": "^2.0.6",
     "antd": "^5.21.2",
     "axios": "^1.7.7",
