--- a/electronics_enduser/package.json
+++ b/electronics_enduser/package.json
@@ -10,10 +10,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
     "@hookform/resolvers": "^3.9.1",
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@mui/material": "^6.1.6",
+    "@mui/material": "^6.1.8",
     "bootstrap": "4.6.2",
     "next": "14.2.15",
     "next-auth": "^4.24.10",
@@ -23,9 +23,10 @@
     "react-loading-skeleton": "^3.5.0",
     "react-toastify": "^10.0.6",
     "swiper": "^11.1.14",
-    "yup": "^1.4.0",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "yup": "^1.4.0",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@types/next-auth": "^3.15.0",
